--- a/SettingsWindow.xaml
+++ b/SettingsWindow.xaml
@@ -127,7 +127,7 @@
                             <ComboBoxItem x:Name="CustomTheme">Custom</ComboBoxItem>
                         </ComboBox>
                     </Grid>
-                    <Grid Grid.Row="1" IsEnabled="{Binding Path=IsSelected, ElementName=CustomTheme}">
+                    <Grid Grid.Row="1" Margin="0,5,0,0" IsEnabled="{Binding Path=IsSelected, ElementName=CustomTheme}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="70"></RowDefinition>
                             <RowDefinition Height="70"></RowDefinition>
